--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "econstocksgame",
-  "version": "1.0.0",
-  "description": "",
+  "description": "Investment Simulation Game",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
-  },
-  "engines": {
-    "node": ">=16.0.0"
   }
 }
